--- a/KT_1/KT_1.csproj
+++ b/KT_1/KT_1.csproj
@@ -69,6 +69,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Accessory.cs" />
+    <Compile Include="Model\Fabric.cs" />
+    <Compile Include="Model\Product.cs" />
+    <Compile Include="Model\ProductAccessory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -94,5 +98,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
