--- a/KT_1/KT_1.csproj
+++ b/KT_1/KT_1.csproj
@@ -59,13 +59,23 @@
     </ApplicationDefinition>
     <Compile Include="Converters\StringNullOrEmptyToBorderThicknessConverter.cs" />
     <Compile Include="Converters\StringNullOrEmptyToVisibilityConverter.cs" />
+    <Compile Include="DataAccessLayer\AccessoryRepository.cs" />
+    <Compile Include="DataAccessLayer\FabricRepository.cs" />
+    <Compile Include="DataAccessLayer\OrderRepository.cs" />
     <Compile Include="DataAccessLayer\UserRepository.cs" />
     <Compile Include="Helpers\DialogView.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
+    <Compile Include="Model\AccessoryBatch.cs" />
+    <Compile Include="Model\FabricRoll.cs" />
+    <Compile Include="ViewModel\AccessoriesAccountingViewModel.cs" />
     <Compile Include="ViewModel\AuthorizationViewModel.cs" />
     <Compile Include="Helpers\BaseViewModel.cs" />
+    <Compile Include="ViewModel\FabricAccountingViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="ViewModel\OrdersViewModel.cs" />
+    <Compile Include="ViewModel\ProductAccountingViewModel.cs" />
     <Compile Include="ViewModel\RegistrationViewModel.cs" />
+    <Compile Include="ViewModel\StorageAccountingViewModel.cs" />
     <Compile Include="View\AuthorizationWindow.xaml.cs">
       <DependentUpon>AuthorizationWindow.xaml</DependentUpon>
     </Compile>
@@ -74,10 +84,23 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DataAccessLayer\ProductRepository.cs" />
-    <Compile Include="View\Factories\MainViewFactory.cs" />
-    <Compile Include="View\Factories\RegistrationViewFactory.cs" />
+    <Compile Include="View\Pages\AccessoriesAccounting.xaml.cs">
+      <DependentUpon>AccessoriesAccounting.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Pages\OrdersAccounting.xaml.cs">
+      <DependentUpon>OrdersAccounting.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Pages\FabricsAccounting.xaml.cs">
+      <DependentUpon>FabricsAccounting.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Pages\ProductsAccounting.xaml.cs">
+      <DependentUpon>ProductsAccounting.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Pages\StorageAccounting.xaml.cs">
+      <DependentUpon>StorageAccounting.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\RegistrationWindow.xaml.cs">
       <DependentUpon>RegistrationWindow.xaml</DependentUpon>
@@ -90,9 +113,29 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\Pages\AccessoriesAccounting.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Pages\OrdersAccounting.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Pages\FabricsAccounting.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\Pages\ProductsAccounting.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Pages\StorageAccounting.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\RegistrationWindow.xaml">
       <SubType>Designer</SubType>
